--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <span>Correct Guesses!</span><br/>
         <span id="correct-count">0</span>
     </div>
-    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script type="text/javascript">
     // This .on("click") function will trigger the AJAX Call
     var paintings = ['Vermeer', 'Van Gogh', 'Rembrandt', 'Baburen', 'Both', 'Koninck', 'Rubens', 'Ruisdael', 'Schouten', 'Steen', 'Venne', 'Voogd'];
